[FIX] - Partial Message created

--- a/Front/src/app/components/pages/connection/connection.component.html
+++ b/Front/src/app/components/pages/connection/connection.component.html
@@ -20,6 +20,6 @@
                 Don't have an account? Sign up!
             </p>
         </div>
-        <p class="message">{{ message }}</p>
+        <app-message [message]="message"></app-message>
     </form>
 </div>
