--- a/Front/src/app/components/pages/create-product/create-product.component.html
+++ b/Front/src/app/components/pages/create-product/create-product.component.html
@@ -64,6 +64,6 @@
         <button class="create-button button" (click)="addProduct()"
             type="button">
             Create Product!</button><br />
-        <p class="message">{{message}}</p>
+        <app-message [message]="message"></app-message>
     </div>
 </div>
