--- a/Front/src/app/components/pages/me/me.component.html
+++ b/Front/src/app/components/pages/me/me.component.html
@@ -67,6 +67,6 @@
                 <button class="button" (click)="toggleEditMode()">Back</button>
             </div>
         </div>
-        <p class="message">{{ message }}</p>
+        <app-message [message]="message"></app-message>
     </div>
 </div>
