--- a/Front/src/app/components/pages/modify-product/modify-product.component.html
+++ b/Front/src/app/components/pages/modify-product/modify-product.component.html
@@ -68,6 +68,6 @@
             <button class="button create-button cancel-button " (click)="cancelModification()" type="button">
                 Cancel!</button><br />
         </div>
-        <p class="message">{{message}}</p>
+        <app-message [message]="message"></app-message>
     </div>
 </div>
