--- a/Front/src/app/components/pages/user/user.component.html
+++ b/Front/src/app/components/pages/user/user.component.html
@@ -69,7 +69,7 @@
                     <button class="button" (click)="toggleEditMode()">Back</button>
                 </div>
             </div>
-            <p class="message">{{ message }}</p>
+            <app-message [message]="message"></app-message>
         </section>
     </ng-template>
 
