--- a/Front/src/app/components/pages/signup/signup.component.html
+++ b/Front/src/app/components/pages/signup/signup.component.html
@@ -44,6 +44,6 @@
                 Already have an account? Login!
             </p>
         </div>
-        <p class="message">{{ message }}</p>
+        <app-message [message]="message"></app-message>
     </form>
 </div>
