--- a/Front/src/app/components/pages/create-product/create-product.component.scss
+++ b/Front/src/app/components/pages/create-product/create-product.component.scss
@@ -1,1 +1,20 @@
 @import url("../../../../styles/car.styles.scss");
+
+.details-to-change {
+    margin: 0.3rem 0.3rem 0 0rem;
+}
+
+.buttons {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+
+    .create-button {
+        margin-left: 2rem;
+        margin-right: 2rem;
+    }
+
+    .cancel-button {
+        background-color: var(--red);
+    }
+}
