--- a/Front/src/app/components/pages/modify-product/modify-product.component.html
+++ b/Front/src/app/components/pages/modify-product/modify-product.component.html
@@ -20,18 +20,18 @@
                 <div class="line">
                     <i class="fa-solid fa-calendar" style="padding: 0 1px 0 3px;"></i>
                     <input [(ngModel)]="data.Year" placeholder="{{product.Year}}" class="input-form" type="number"
-                        id="year" name="year" value={{product.Year}} />
+                        id="year" name="year" />
                 </div>
                 <div class="line">
                     <i class="fa-solid fa-usd" style="padding: 0 4px 0 3px;"></i>
                     <input [(ngModel)]="data.Price" placeholder="{{product.Price}}" class="input-form" type="number"
-                        id="price" name="price" value={{product.Price}} />
+                        id="price" name="price" />
                 </div>
 
                 <div class="line">
                     <i class="fa-solid fa-commenting"></i>
-                    <input [(ngModel)]="data.Description" value="{{product.Description}}" class="input-form" type="text"
-                        id="desc" name="desc" value={{product.Description}} />
+                    <input [(ngModel)]="data.Description" placeholder="{{product.Description}}" class="input-form" type="text"
+                        id="desc" name="desc" />
                 </div>
 
                 <div class="line">
