[ADD] - Added inheritence

--- a/Front/src/app/components/pages/create-product/create-product.component.html
+++ b/Front/src/app/components/pages/create-product/create-product.component.html
@@ -1,35 +1,35 @@
 <div class="main-wrapper">
     <div class="main-panel car-panel">
-        <h1 class="title">Create a new product</h1>
+        <h1 class="title">{{title}}</h1>
         <div class="values">
             <div>
                 <div class="line" style="justify-content: flex-start;">
                     <i class="fa-solid fa-car" style="margin-right: 24px;"></i>
                     <div>
                         <select #brand class="brand-model" (change)="onBrandChange(brand.value)">
-                            <option value="" disabled selected>Choose a brand</option>
+                            <option *ngIf="!currentBrandId" value="" disabled selected>Choose a brand</option>
                             <option *ngFor="let brand of brands" [value]="brand.id">{{brand.BrandName}}</option>
                         </select>
                     </div>
                     <div *ngIf="models.length > 0">
-                        <select #model class="brand-model model" [(ngModel)]="product.ModelBrandID">
+                        <select #model class="brand-model" [(ngModel)]="data.ModelBrandID">
                             <option *ngFor="let model of models" [value]="model.id" >{{model.ModelName}}</option>
                         </select>
                     </div>
                 </div>
                 <div class="line">
                     <i class="fa-solid fa-calendar" style="padding: 0 1px 0 3px;"></i>
-                    <input [(ngModel)]="product.Year" placeholder="Year of the product" class="input-form" type="number" id="year"
+                    <input [(ngModel)]="data.Year" [value]="product.Year" placeholder="Year of the product" class="input-form" type="number" id="year"
                         name="year" />
                 </div>
                 <div class="line">
                     <i class="fa-solid fa-eur" style="padding: 0 4px 0 3px;"></i>
-                    <input [(ngModel)]="product.Price" placeholder="Price of the product in €" class="input-form" type="number" id="price"
+                    <input [(ngModel)]="data.Price" [value]="product.Price" placeholder="Price of the product in €" class="input-form" type="number" id="price"
                         name="price" />
                 </div>
                 <div class="line">
                     <i class="fa-solid fa-commenting"></i>
-                    <input [(ngModel)]="product.Description" placeholder="Description of the product" class="input-form" type="text"
+                    <input [(ngModel)]="data.Description" [value]="product.Description" placeholder="Description of the product" class="input-form" type="text"
                         id="desc" name="desc" />
                 </div>
 
@@ -63,8 +63,8 @@
         </div>
 
         <div class="buttons">
-            <button class="button create-button" (click)="addProduct()" type="button">
-                Modify Product!</button><br />
+            <button class="button create-button" (click)="submit()" type="button">
+                {{createModify}} Product!</button><br />
             <button class="button create-button cancel-button " (click)="cancel()" type="button">
                 Cancel!</button><br />
         </div>
