--- a/Front/src/app/components/pages/product/product.component.scss
+++ b/Front/src/app/components/pages/product/product.component.scss
@@ -27,7 +27,7 @@
         }
 
         .model-showcase {
-            margin-top: 0;
+            margin-top: 1rem;
             margin-bottom: -1rem;
             font-size: 2.5rem;
         }
