[FIX] - Added ngOnDestroy and small fix for me page

--- a/Front/src/app/components/pages/create-product/create-product.component.scss
+++ b/Front/src/app/components/pages/create-product/create-product.component.scss
@@ -14,3 +14,10 @@
         background-color: var(--red);
     }
 }
+
+.add-image {
+    box-sizing: border-box;
+    width: 50%;
+
+    margin: 0 4rem;
+}
