--- a/Front/src/app/components/pages/me/me.component.html
+++ b/Front/src/app/components/pages/me/me.component.html
@@ -2,20 +2,9 @@
     <div class="main-panel">
         <h1 class="title">Your account</h1>
         <p *ngIf="data.Role" class="admin-text">Admin</p>
-        <div *ngIf="!isEditMode">
-            <div class="line">
-                <i class="fa fa-user"></i>
-                <p class="display-form">{{ data.LastName }} {{ data.Name }}</p>
-            </div>
-            <div class="line">
-                <i class="fa-solid fa-at"></i>
-                <p class="display-form">{{ data.Email }}</p>
-            </div>
-            <div class="line">
-                <i class="fa-solid fa-location-dot"></i>
-                <p class="display-form">{{ data.Address }}, {{ data.PostalCode }} {{ data.City }}</p>
-            </div>
 
+        <div *ngIf="!isEditMode">
+            <app-user-display [data]="data" [userID]="userID"></app-user-display>
             <div style="display: flex; flex-direction: row; margin-top: 3rem;">
                 <button class="button"
                     (click)="toggleEditMode()">Modify
@@ -31,37 +20,9 @@
             </div>
             <button class="button delete" (click)="userDelete()">Delete account</button>
         </div>
-        <!-- Edit mode -->
+        
         <div *ngIf="isEditMode">
-            <div class="line">
-                <i class="fa fa-user"></i>
-                <input [(ngModel)]="data.Name" autofocus placeholder="{{ data.Name }}" class="input-form" type="text" id="username" name="username" />
-            </div>
-            <div class="line">
-                <i class="fa fa-user"></i>
-                <input [(ngModel)]="data.LastName" placeholder="{{ data.LastName }}" class="input-form" type="text" id="username" name="username" />
-            </div>    
-            <div class="line">
-                <i class="fa-solid fa-at"></i>
-                <input [(ngModel)]="data.Email"  placeholder="{{ data.Email }}" class="input-form" type="text" id="email" name="email" />
-            </div>
-            <div class="line">
-                <i class="fa-solid fa-location-dot"></i>
-                <input [(ngModel)]="data.Address" placeholder="{{ data.Address }}" class="input-form" type="text" id="Addresss" name="Addresss" />
-            </div>
-            <div class="line">
-                <i class="fa-solid fa-city"></i>
-                <input [(ngModel)]="data.City" placeholder="City" class="input-form" type="text" id="city" name="city" style="padding-right: -20px;" />
-            </div>
-            <div class="line">
-                <i class="fa-regular fa-envelope"></i>
-                <input [(ngModel)]="data.PostalCode" placeholder="Postal Code" class="input-form" type="text" id="postalCode" name="postalCode"
-                />
-            </div>
-            <div class="line">
-                <i class="fa-solid fa-lock"></i>
-                <input [(ngModel)]="data.Password" placeholder="Password" class="input-form" type="password" id="password" name="password" />
-            </div>
+            <app-user-create-modify [data]="data"></app-user-create-modify>
             <div class="modify-buttons">
                 <button class="button" (click)="userModify()">Confirm</button>
                 <button class="button" (click)="toggleEditMode()">Back</button>
