--- a/Front/src/styles.scss
+++ b/Front/src/styles.scss
@@ -161,56 +161,6 @@ a {
     }
 }        
 
-// Adding images styles
-.add-image {
-    box-sizing: border-box;
-    width: 50%;
-
-    margin: 0 4rem;
-
-    h3 {
-        color: var(--dark);
-        border-bottom: 1px solid #bebebe;
-    }
-
-    .add-image-container {
-        display: flex;
-        flex-wrap: wrap;
-
-        gap: 0.5rem;
-        max-height: 330px;
-        overflow-y: auto; 
-        border: 1px solid #bebebe;
-        padding: 1rem;
-        align-items: center;
-
-        label {
-            font-size: 150%;
-        }
-        
-        img,
-        label {
-            cursor: pointer;
-            display: flex;
-            width: 150px;
-            height: 150px;
-            justify-content: center;
-            align-items: center;
-            border: solid 1px black;
-            border-radius: 5px;
-            object-fit: cover;
-        }
-
-
-        input {
-            width: 150px;
-            height: 150px;
-            opacity: 0;
-            height: 0;
-        }
-    }
-}
-
 // Title 
 .title {
     color: var(--dark);
@@ -219,4 +169,19 @@ a {
     border-bottom: 1px solid #bebebe;
 }
 
+// Message
+.message {
+    text-align: center;
+    align-self: center;
+    // margin-bottom: 8rem;
+    padding: 1rem;
+    border: 1px solid;
+    border-radius: 18px;
+    border-color: rgb(121, 121, 121);
+    font-size: 2rem;
+    min-width: 200px;
+    max-width: 200px;
+    min-height: 45px;
+    position: static;
+}
 /* End GLOBAL */
