--- a/Front/src/app/components/pages/product/product.component.scss
+++ b/Front/src/app/components/pages/product/product.component.scss
@@ -42,7 +42,8 @@
         display: flex;
         flex-direction: row;
         justify-content: space-between;
-        padding: 0 3rem;
+        padding: 0 5rem;
+        width: 100%;
         
         .image-container {
             display: flex;
@@ -56,7 +57,7 @@
             img {
                 border: 1px solid;
                 aspect-ratio: auto;
-                max-width: 500px;
+                max-width: 450px;
                 max-height: 300px;
                 min-width: 300px;
                 min-height: 300px;
@@ -98,11 +99,12 @@
             display: flex;
             flex-flow: column;
             width: 100%;
-            min-width: 50rem;
+            max-width: 50rem;
+            min-width: 20rem;
             min-height: 30rem;
             height: 100%;
             border: 0.1rem solid;
-            margin: 0;
+            margin: 0 10rem 0 0;
             border-radius: 1rem;
             padding: 2rem 2rem 2rem 2rem;
             background-color: rgb(242, 240, 240);
