[FIX] - Fixed the Front bug

--- a/Front/src/app/core/components/footer/footer.component.html
+++ b/Front/src/app/core/components/footer/footer.component.html
@@ -15,7 +15,7 @@
                 <li><a routerLink="/account/users">Users</a><br></li>
                 <li *ngIf="loggedIn"><a routerLink="/auth/logout">Logout</a><br></li>
                 <li *ngIf="!loggedIn"><a routerLink="/auth/login">Login</a><br></li>
-                <li><a routerLink="/me">Account</a><br></li>
+                <li><a routerLink="/account/me">Account</a><br></li>
             </ul>
         </nav>
     </div>
