--- a/Front/src/app/modules/account/pages/delete-user/delete-user/delete-user.component.html
+++ b/Front/src/app/modules/account/pages/delete-user/delete-user/delete-user.component.html
@@ -1,7 +1,1 @@
-<div class="delete-main-wrapper main-wrapper">
-    <div class="delete-main-panel main-panel">
-        <p class="delete-title title">Are you sure ?</p>
-        <p class="delete-message message">{{ message }}</p>
-        <button (click)="userDelete()" type="button" class="delete-button button">Delete!</button><br />
-    </div>
-</div>
+<app-delete-panel (deleteButtonClicked)="userDelete()"></app-delete-panel>
