--- a/Front/src/app/shared/ui/delete-panel/delete-panel/delete-panel.component.scss
+++ b/Front/src/app/shared/ui/delete-panel/delete-panel/delete-panel.component.scss
@@ -2,8 +2,12 @@
     padding: 1rem 2rem;
 
     .delete-main-panel {
-        width: 55%;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
         align-items: center;
+        width: 80%;
+        min-width: 80%;
         margin-top: 10rem;
         padding: 2rem 25rem 5rem 25rem;
         background-color: rgba(240, 248, 255, 0.635);
@@ -20,6 +24,7 @@
         }
 
         .delete-button {
+            min-width: 100px;
             background-color: var(--red);
             margin-top: 2rem;
             color: white;
