--- a/Front/src/app/modules/product/components/products-list/products-list/products-list.component.scss
+++ b/Front/src/app/modules/product/components/products-list/products-list/products-list.component.scss
@@ -27,7 +27,7 @@
 
         transition: 0.1s;
         width: 45%;
-        min-width: 45%;
+        min-width: 50rem;
         background-color: var(--cream);
         box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.1);
         border-radius: 1rem;
