--- a/Front/src/app/core/components/footer/footer.component.html
+++ b/Front/src/app/core/components/footer/footer.component.html
@@ -12,7 +12,7 @@
                 <li><a routerLink="/contact">Contact</a></li>
             </ul>
             <ul>
-                <li><a routerLink="/account/users">Users</a><br></li>
+                <li *ngIf="admin" ><a routerLink="/admin/users">Users</a><br></li>
                 <li *ngIf="loggedIn"><a routerLink="/auth/logout">Logout</a><br></li>
                 <li *ngIf="!loggedIn"><a routerLink="/auth/login">Login</a><br></li>
                 <li><a routerLink="/account/me">Account</a><br></li>
