--- a/Front/src/app/modules/product/pages/product-car/product-car/product-car.component.html
+++ b/Front/src/app/modules/product/pages/product-car/product-car/product-car.component.html
@@ -31,6 +31,11 @@
                 <h3 class="showcase">Price :</h3>
                 <p class="text">{{product.Price/100}} €</p>
                 <hr class="hr-info" />
+                <h3 class="showcase">Seller :</h3>
+                <p class="text">{{product.SellerName}} {{product.SellerLastName}} </p>
+                <hr class="hr-info" />
+                <h3 class="showcase">Seller Email :</h3>
+                <p class="text">{{product.SellerEmail}} </p>
             </div>
         </div>
         <div class="controls">
