--- a/Front/src/app/modules/admin/components/users/users/users.component.html
+++ b/Front/src/app/modules/admin/components/users/users/users.component.html
@@ -1,20 +1,15 @@
 <div class="wrapper">
-    <div class="user-title">
-        <h1>
-            USERS
-        </h1>
-    </div>
-    <hr class="solid">
-
     <div class="users-container">
-        <div routerLink="../user/{{ user.id }}" class="user-card" *ngFor="let user of userList">
+        <div routerLink="/account/user/{{ user.id }}" class="user-card" *ngFor="let user of userList">
             <div class="user-image">
                 <img src="../../../../../../assets/images/user2.png" alt="{{ user.Name }}">
             </div>
             <div class="user-text">
-                <h2 class="user-name">{{ user.LastName }} {{ user.Name }}</h2>
+                <h1 class="user-name">Name : {{ user.LastName }} {{ user.Name }}</h1>
+                <h3 class="user-details">Email : {{ user.Email }}</h3>
+                <hr class="solid">
+                <h3 class="user-details">Company : {{ user.CompanyName }}</h3>
             </div>
         </div>
     </div>
-
 </div>
