--- a/Front/src/app/modules/admin/components/users/users/users.component.scss
+++ b/Front/src/app/modules/admin/components/users/users/users.component.scss
@@ -1,74 +1,43 @@
 .wrapper {
-    display: flex;
-    align-items: center;
-    flex-direction: column;
-    justify-content: center;
-    position: relative;
     width: 100%;
-    min-height: 100%;
-    padding: 3rem 2rem;
 }
 
 hr.solid {
-    width: 90%;
-    border-top: 1px solid white;
-    margin-bottom: 5rem;
-}
-
-.user-title {
-    display: flex;
-    margin: 2rem 0 2rem 0;
-    border: 3px solid #0f0f0f;
-    border-radius: 5rem;
-    background-color: white;
-    width: 60%;
-    justify-content: center;
-    background: rgb(228, 234, 245) 100%;
-
-    h1 {
-        font-size: 50px;
-        letter-spacing: 1rem;
-    }
+    width: 100%;
+    border-top: 1px solid grey;
 }
 
 .users-container {
     display: flex;
-    flex-flow: row wrap;
+    flex-direction: column;
     align-items: center;
-    justify-content: space-evenly;
-    row-gap: 5rem;
-    column-gap: 5rem;
+    justify-self: center;
+    width: 100rem;
+    height: 50rem;
+    overflow-y: scroll;
+        
+    row-gap: 3rem;
     margin: 2rem 1rem;
     border: 1px solid;
-    border-color: rgba(98, 98, 98, 0.286);
-    border-radius: 1rem;
     backdrop-filter: blur(5px);
     background-color: rgba(122, 115, 151, 0.089);
     padding: 8rem;
+    
 
     .user-card {
-        width: 28rem;
+        display: flex;
+        flex-direction: row;
+        width: 100%;
+        height: 12rem;
         border: 1px solid #ccc;
+        
         box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.1);
         border-radius: 2rem;
-        overflow: hidden;
-        background: rgb(26, 102, 225);
+        background: white;
 
         &:hover {
             transform: scale(1.05);
-            background: rgb(61, 203, 97);
             transition: transform 0.3s;
-            .user-image {
-                filter: hue-rotate(80deg);
-            }
-
-            .user-text {
-                background: linear-gradient(
-                    360deg,
-                    var(--cream) 85%,
-                    rgb(61, 203, 97)
-                );
-            }
         }
 
         &:active {
@@ -78,24 +47,28 @@ hr.solid {
 
         .user-image {
             display: flex;
-            width: 100%;
+            width: 25%;
             height: auto;
             justify-content: center;
             margin: 1rem 0 1rem 0;
         }
 
         .user-text {
+            width: 100%;
             padding: 1rem;
-            background: linear-gradient(
-                360deg,
-                var(--cream) 85%,
-                rgb(26, 102, 225) 100%
-            );
+            background: white;
+            border-bottom-right-radius: 2rem;
+            border-bottom-right-radius: 2rem;
+            border-left: 0.1rem solid black;
 
             .user-name {
-                font-size: 20px;
-                font-weight: bold;
-                margin: 3rem 0 1rem 0;
+                font-size: 18px;
+                margin: 0 0 0.2rem 0;
+            }
+
+            .user-details {
+                font-size: 15px;
+                margin: 0 0 1rem 0;
             }
 
             .user-description {
