[FIX] - Fixed connection bugs

--- a/V1/Front/src/app/modules/connection/pages/connect/connect/connect.component.html
+++ b/V1/Front/src/app/modules/connection/pages/connect/connect/connect.component.html
@@ -15,7 +15,7 @@
             Login
         </button>
         <div class="register-text">
-            <p routerLink="/auth/logout" class="register-link">
+            <p routerLink="/auth/register" class="register-link">
                 <i class="fa fa-key"></i>
                 Don't have an account? Sign up!
             </p>
