--- a/V1/Front/src/app/modules/account/components/user-display/user-display/user-display.component.html
+++ b/V1/Front/src/app/modules/account/components/user-display/user-display/user-display.component.html
@@ -8,5 +8,5 @@
 </div>
 <div class="line">
     <i class="fa-solid fa-location-dot"></i>
-    <p class="display-form">{{ data.Address }}, {{ data.PostalCode }} {{ data.City }}</p>
+    <p class="display-form">{{ data.Address }}{{ ', ' + data.PostalCode }} {{ data.City }}</p>
 </div>
