--- a/V1/Front/src/app/modules/admin/pages/admin-page/admin-page/admin-page.component.scss
+++ b/V1/Front/src/app/modules/admin/pages/admin-page/admin-page/admin-page.component.scss
@@ -78,7 +78,7 @@
         
                     &:hover {
                         // transform: scale(1.01);
-                        box-shadow: 0 1px 3px #7187bc;
+                        cursor: auto;
                     }
                 
                     &:active {
